# rsloop

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
benchmarks/: EXPERIMENT_LOG.md  README.md  loops.py  native_sample.py  revision_ab.py
docs/: native-io-engine.md
examples/: bridge.py
profiling/: README.md  run.py
python/kioto/: __init__.py  loop.py
python/rsloop/: __init__.py  loop.py  pipe_transport.py  sslproto.py
src/: bridge.rs  completion.rs  fd_callbacks.rs  handles.rs  lib.rs  loop_api.rs  loop_core.rs  native_subprocess.rs  pipe_registry.rs  pipe_transport.rs  poller.rs  scheduler.rs  server_driver.rs  socket_driver.rs  socket_registry.rs  socket_state.rs  stream_reader.rs  stream_registry.rs  stream_transport.rs  subprocess_pipe_transport.rs  subprocess_transport.rs  tcp_transport.rs  tls.rs  transport_core.rs
tests/: test_benchmarks.py  test_loop.py
