[package]
name = "rsloop"
version = "0.1.0"
edition = "2021"
description = "Tokio-backed asyncio bridge and event-loop scaffold for Python"
license = "MIT"

[lib]
name = "_rsloop"
crate-type = ["cdylib"]

[dependencies]
bytes = "1"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
libc = "0.2"
memchr = "2"
mio = { version = "1", features = ["os-ext", "os-poll"] }
parking_lot = "0.12"
pyo3 = { version = "0.28.2", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
