[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "kioto"
version = "0.1.0"
description = "Tokio-backed asyncio bridge and event-loop scaffold"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ramazan" }]
dependencies = []

[project.optional-dependencies]
profiling = ["pyinstrument>=5.1"]

[tool.maturin]
python-source = "python"
module-name = "kioto._kioto"
